--- a/campo.html
+++ b/campo.html
@@ -84,17 +84,19 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>V1 = 35V</th>
-                            <th>V2 = 30V</th>
-                            <th>V3 = 25V</th>
-                            <th>V4 = 20V</th>
-                            <th>V5 = 15V</th>
-                            <th>V6 = 10V</th>
-                            <th>V7 = 5V</th>
+                            <th>V1</th>
+                            <th>V2</th>
+                            <th>V3</th>
+                            <th>V4</th>
+                            <th>V5</th>
+                            <th>V6</th>
+                            <th>V7</th>
                         </tr>
                     </thead>
                     <tbody id="tbody">
                     </tbody>
+                    <tfoot id="tfoot">
+                    </tfoot>
                 </table>
             </div>
             <div class="btn" style="text-align: center; width: 100%;">
