--- a/campo.html
+++ b/campo.html
@@ -100,7 +100,7 @@
                 </table>
             </div>
             <div class="btn" style="text-align: center; width: 100%;">
-                <input type="button" class="btn-calculo" value="Calcular">
+                <!--<input type="button" class="btn-calculo" value="Calcular">-->
                 <input type="button" class="btn-cerrar" value="Cerrar">
             </div>
         </div>
