--- a/campo.html
+++ b/campo.html
@@ -51,7 +51,7 @@
                             <option value="10" class="optionValue">10 V</option>
                             <option value="5" class="optionValue">5 V</option>
                         </select>
-                        <input type="button" value="Selecionar" class="btn" id="btnVolt">
+                        <input type="button" value="Selecionar" class="btn btn-select" id="btnVolt">
                     </div>
                 </article>
                 <article class="container__article containerVisible">
@@ -61,7 +61,7 @@
                             <div class="posY">Posición en y: <span id="posy">0</span></div>
                         </div>
                         <div class="selecion">
-                            <input type="button" value="Selecionar" id="btn">
+                            <input type="button" value="Selecionar" id="btn" class="btn btn-select">
                             <ul class="lista__ul">
                                 <li class="lista__li"></li>
                                 <li class="lista__li"></li>
